# sequence-analyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dependecies.json
include/sequence-analyzer/: sequence-analyzer.hpp  sequence-analyzer_declare.hpp
include/sequence-analyzer/__internal/: sequence-analyzer.hpp  sequence-analyzer_define.hpp
include/sequence-analyzer/delivable/builder/: list_builder.hpp  sequence_builder.hpp
include/sequence-analyzer/rule/: read_status.hpp  rule.hpp  rule_candidates.hpp  rule_candidates_declare.hpp  rule_declare.hpp  rule_list.hpp  rule_list_declare.hpp  rule_sequence.hpp  rule_sequence_declare.hpp
include/sequence-analyzer/rule/__internal/: rule_candidates.hpp  rule_candidates_define.hpp  rule_define.hpp  rule_list_define.hpp  rule_sequence.hpp  rule_sequence_define.hpp
src/: sequence-analyzer.cpp
test/: CMakeLists.txt  Error.hpp  LongMatchRule_0SeekBack.hpp  SimpleRule_0SeekBack.hpp  SimpleRule_1SeekBack.hpp  SimpleRule_SpecifiedChar.hpp  SimpleRule_SpecifiedChar2.hpp  SimpleRule_SpecifiedCharN.hpp  SimpleRule_SpecifiedChar_Pool2OnError.hpp  SimpleRule_SpecifiedChar_PoolNOnError.hpp  candidate_rule_test.cpp  list_rule_test.cpp  rule_test.cpp  sequence_rule_test.cpp
